test git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ### Eclipse ###
+target/
 .metadata
 bin/
 tmp/
@@ -33,7 +34,7 @@ local.properties
 .buildpath
 
 # sbteclipse plugin
-.target
+.target/
 
 # Tern plugin
 .tern-project
