--- a/SpringChat/springchat/src/main/resources/application.properties
+++ b/SpringChat/springchat/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #stratégie utilisée pour générer les tables en Bdd 
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=schema
 
 #Configuration des logs
 #TODO : mettre à false en production
