update user controller

--- a/SpringChat/springchat/src/main/resources/application.properties
+++ b/SpringChat/springchat/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.properties.hibernate.generate_statistics=false
 
 logging.level.org.springframework.web=info
 logging.level.org.hibernate=info
+
+management.endpoints.web.exposure.include=env,info,health,httptrace,logfile,metrics,mappings
