gestion CORS et test axios

--- a/SpringChat/springchat/src/main/resources/application.properties
+++ b/SpringChat/springchat/src/main/resources/application.properties
@@ -17,7 +17,11 @@ spring.jpa.properties.hibernate.default_schema=schema
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.generate_statistics=false
 
+spring.mvc.dispatch-options-request=true
+
 logging.level.org.springframework.web=info
 logging.level.org.hibernate=info
 
 management.endpoints.web.exposure.include=env,info,health,httptrace,logfile,metrics,mappings
+
+allowedUrl=*
